--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "n3": "^1.17.2",
     "pinia": "^2.0.11",
     "process": "^0.11.10",
-    "quasar": "^2.6.0",
+    "quasar": "^2.14.0",
     "solid-helper-vue": "^0.2.0",
     "solid-namespace": "^0.5.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.3.0",
+    "@quasar/app-vite": "^1.7.0",
+    "@quasar/vite-plugin": "^1.6.0",
     "@types/n3": "^1.16.3",
-    "@types/node": "^12.20.21",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.2",
@@ -38,6 +39,9 @@
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
+  },
+  "overrides": {
+    "vite": "^4.0.0"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
